--- a/CadastroPessoasApp.Test/CadastroPessoasApp.Test.csproj
+++ b/CadastroPessoasApp.Test/CadastroPessoasApp.Test.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ExpectedObjects" Version="3.5.4" />
     <PackageReference Include="FluentAssertions" Version="6.1.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
     <PackageReference Include="Moq" Version="4.16.1" />
@@ -23,10 +24,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CadastroPessoasApp\CadastroPessoasApp.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="ViewModel\" />
   </ItemGroup>
 
 </Project>
